--- a/index.html
+++ b/index.html
@@ -3,12 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/Imagenes/Logo.png" type="i77mage/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="CSS/Style.css">
     <title>Lista de Compras Interactiva</title>
     
 </head>
 <body>
+   <!--Inicio de la barra de Navegacion-->
+<header>
+    <nav>
+        <div>
+            <a href="/index.html"><img src="./Imagenes/Logo.png" width="50px" height="50px" alt=""/></a>
+            <p><strong>VIKASTORE</strong></p>
+        </div>
+        <div>
+            <ul >
+                <li>
+                    <a href="./index.html#productos"><strong>Desayunos</strong></a>
+                </li>
+                <li >
+                    <a href="./index.html#postres"><strong>Postres</strong></a>
+                </li>
+                <li>
+                    <a href="./index.html#bebidas"><strong>Bebidas</strong></a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="./index.html#carrito-footer">
+                <i class="fa-solid fa-cart-shopping"></i>
+            </a>
+        </div>
+    </nav>
+</header>
+<main>
+    <h2>Desayunos</h2>
+    <section></section>
+    <h2>Postres</h2>
+    <section></section>
+    <h2>Bebidas</h2>
+    <section></section>
+    <h2>Carrito</h2>
+    <section>    
+        <div></div>
+    </section>
+    <p></p>
 
-    
+</main> 
+
+
+
+
+
+
+
+
+
+
+<!-- inicio de la divicion del footer -->
+<footer>
+    <div>
+        <ul>
+            <li><a href="./index.html#productos">Desayunos</a></li>
+            <li><a href="./index.html#postres">Postres</a></li>
+            <li><a href="./index.html#bebidas">Bebidas</a></li>
+        </ul>
+    </div>
+    <div>
+        <div>
+            <a href="#">
+                <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </div>
+        <p>© Cream & Coffee 2024. Todos los derechos reservados</p>
+    </div>
+</footer>
+
 
     <script src="./js/main.js"></script>
 </body>
