--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div></div>
     </section>
     <p></p>
-
+    <button>Finalizar Compra</button>
 </main> 
 
 
@@ -86,7 +86,9 @@
     </div>
 </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js"></script>
     <script src="./js/main.js"></script>
+
 </body>
 </html>
